Ported to 1.18.2 and implemented terra--