@@ -3,28 +3,36 @@ plugins {
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+runClient {
+	jvmArgs "--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED"
+}
+
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
-repositories {
-    mavenCentral()
-
-    // Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
-}
-
 dependencies {
-    testImplementation 'org.projectlombok:lombok:1.18.22'
-    implementation 'junit:junit:4.13.2'
-	implementation 'junit:junit:4.13.2'
-	implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+
+	implementation 'net.daporkchop.lib:common:0.5.7-SNAPSHOT'
+	include 'net.daporkchop.lib:common:0.5.7-SNAPSHOT'
+
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+	include 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
+	include 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
+
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.14.1'
+	include 'com.fasterxml.jackson.core:jackson-core:2.14.1'
+
+	implementation 'com.github.SmylerMC:terraminusminus:5907790da3'
+	include 'com.fasterxml.jackson.core:jackson-core:2.14.1'
+	include 'com.github.SmylerMC:terraminusminus:5907790da3'
+
+
 
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -33,6 +41,8 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
@@ -53,8 +63,7 @@ tasks.withType(JavaCompile).configureEach {
 	// If Javadoc is generated, this must be specified in that task too.
 	it.options.encoding = "UTF-8"
 
-	// Minecraft 1.17 (21w19a) upwards uses Java 16.
-	it.options.release = 16
+	it.options.release = 17
 }
 
 java {
@@ -85,11 +94,28 @@ publishing {
 	}
 
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+	allprojects {
+		repositories {
+			// Add repositories to publish to here.
+			// Notice: This block does NOT have the same function as the block in the top level.
+			// The repositories here will be used for publishing your artifact, not for
+			// retrieving dependencies.
+			jcenter()
+			maven {
+				name = "OpenCollab Snapshots"
+				url = "https://repo.opencollab.dev/snapshot/"
+			}
+			maven { url "https://jitpack.io" }
+			maven {
+				name = "sonatype"
+				url = "https://oss.sonatype.org/content/groups/public/"
+			}
+			mavenCentral()
+			maven {
+				name = "Daporkchop_"
+				url = "https://maven.daporkchop.net/"
+			}
+		}
 	}
 }
 
